<resources>
    <string name="app_name">Simple Math</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">Start Game</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="about_url">https://sachinnn999.github.io/</string>
    <string name="notebook_image">notebook image</string>
    <string name="student_name">Sachin De Silva</string>
    <string name="uow_id">W1761382</string>
    <string name="iit_id">2019801</string>
    <string name="lbl_student_name">Name:</string>
    <string name="lbl_uow_id">UOW ID</string>
    <string name="lbl_iit_id">IIT ID</string>
    <string name="disclaimer">"I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged."</string>
    <string name="btn_lbl_greater">Greater</string>
    <string name="btn_lbl_equal">==</string>
    <string name="btn_lbl_less">Less</string>
    <string name="txt_score">Score:  %1$d /  %2$d</string>
    <string name="txt_summary_score">%1$d /  %2$d</string>
    <string name="txt_time">Time: %1$d</string>
    <string name="result">Summary</string>
    <string name="img_maths">Game Summary Image</string>
    <string name="your_score">Your Score</string>
    <string name="shared_pref">com.sachinnn.simplemath</string>
</resources>