<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="246dp"
                android:layout_height="228dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/notebook_image"
                android:src="@drawable/notebook" />

            <Button
                android:id="@+id/btn_start_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/start_game" />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/about" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>