<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".GameActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Score: 10"
            />

        <TextView
            android:id="@+id/view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            tools:text="Time Left: 50"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/view_left_equation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@color/yellow_200"
            android:minHeight="80dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="((10-2)*3)/4" />

        <TextView
            android:id="@+id/view_right_equation"
            android:layout_width="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="5dp"
            android:minHeight="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/yellow_200"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="(6+4)/2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_greater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_lbl_greater"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/btn_lbl_equal" />

        <Button
            android:id="@+id/btn_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/btn_lbl_less" />
    </LinearLayout>

</LinearLayout>
